tests/ui/missing_db_option.stderr
error: no database backend specified

         = help: try specifying an db, for example: `db=sled`

 --> tests/ui/missing_db_option.rs:3:12
  |
3 | #[dbstruct(db)]
  |            ^^
