tests/ui/missing_db_option.rs
use dbstruct::dbstruct;

#[dbstruct(db)]
struct Test {
    field: Option<u8>,
}

fn main() {}
